--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
 PORT=5000
 PGUSER=postgres
-PGHOST=database-1.crehsoj9sreo.ap-south-1.rds.amazonaws.com
-PGPASSWORD=Jg3Iy0sfvuJyaVqJuQja
+PGHOST=terraform-20250711045059055400000009.crehsoj9sreo.ap-south-1.rds.amazonaws.com
+PGPASSWORD=PCAskq2wVZsBF6L
 PGDATABASE=postgres
 PGPORT=5432
 JWT_SECRET=3_TIER_APPLICATION
